--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CATmistry</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <style>
         @font-face {
@@ -18,12 +18,12 @@
     <meta name="keywords" content="chemistry, chemistry learning app, cat mistry, catmistry">
     <link rel="icon" href="images/favicon.jpg">
     <link rel="prefetch" href="images/catmistry.png">
-    <link rel="prefetch" href="images/learn1.jpg">
-    <link rel="prefetch" href="images/learn2.jpg">
-    <link rel="prefetch" href="images/learn3.jpg">
-    <link rel="prefetch" href="images/practice.jpg">
-    <link rel="prefetch" href="images/play.jpg">
-    <link rel="prefetch" href="images/follow.jpg">
+    <link rel="prefetch" href="images/learn1.png">
+    <link rel="prefetch" href="images/learn2.png">
+    <link rel="prefetch" href="images/learn3.png">
+    <link rel="prefetch" href="images/practice.png">
+    <link rel="prefetch" href="images/play.png">
+    <link rel="prefetch" href="images/follow.png">
 </head>
 <body>
 <div class="navbar">
@@ -74,6 +74,6 @@
 <!--        <h2>Chemistry, Gamified</h2>-->
 <!--        <p>A chemistry learning app designed for upper primary and lower secondary students</p>-->
 <!--    </div>-->
-<script src="scripts/main.js" defer></script>
+<script src="main.js" defer></script>
 </body>
 </html>
