--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </ul>
 </div>
 <div class="slideshow">
-    <<div class="slide">
+    <div class="slide">
         <img src="images/catmistry.png" class="slide-pic" alt="learn">
         <div class="main-text">CATmistry</div>
         <div class="caption-text">Chemistry, Gamified</div>
