--- a/index.html
+++ b/index.html
@@ -39,32 +39,32 @@
         <div class="caption-text">Chemistry, Gamified</div>
     </div>
     <div class="slide">
-        <img src="images/learn1.jpg" class="slide-pic" alt="learn">
+        <img src="images/learn1.png" class="slide-pic" alt="learn">
         <div class="main-text">Learn</div>
         <div class="caption-text">In a simple-to-understand but detailed manner</div>
     </div>
     <div class="slide">
-        <img src="images/learn2.jpg" class="slide-pic" alt="learn">
+        <img src="images/learn2.png" class="slide-pic" alt="learn">
         <div class="main-text">Learn</div>
         <div class="caption-text">With interactive elements to enhance your understanding</div>
     </div>
     <div class="slide">
-        <img src="images/learn3.jpg" class="slide-pic" alt="learn">
+        <img src="images/learn3.png" class="slide-pic" alt="learn">
         <div class="main-text">Learn</div>
         <div class="caption-text">Through specially designed graphs made by the CATmistry team</div>
     </div>
     <div class="slide">
         <div class="main-text">Practice</div>
         <div class="caption-text">Track your understanding and learn more effectively</div>
-        <img src="images/practice.jpg" class="slide-pic" alt="learn">
+        <img src="images/practice.png" class="slide-pic" alt="learn">
     </div>
     <div class="slide">
-        <img src="images/play.jpg" class="slide-pic" alt="learn">
+        <img src="images/play.png" class="slide-pic" alt="learn">
         <div class="main-text">Play</div>
         <div class="caption-text">CATmistry's own games</div>
     </div>
     <div class="slide">
-        <img src="images/follow.jpg" class="slide-pic" alt="learn">
+        <img src="images/follow.png" class="slide-pic" alt="learn">
         <div class="main-text">Follow</div>
         <div class="caption-text">Your cat on its journey through earth</div>
     </div>
