--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </div>
 <div class="slideshow">
     <div class="slide">
-        <img src="images/catmistry.png" class="slide-pic" alt="learn">
+        <img src="images/catmistry.png" class="slide-pic" alt="CATmistry">
         <div class="main-text">CATmistry</div>
         <div class="caption-text">Chemistry, Gamified</div>
     </div>
@@ -54,17 +54,17 @@
         <div class="caption-text">Through specially designed graphs made by the CATmistry team</div>
     </div>
     <div class="slide">
+        <img src="images/practice.png" class="slide-pic" alt="Practice">
         <div class="main-text">Practice</div>
         <div class="caption-text">Track your understanding and learn more effectively</div>
-        <img src="images/practice.png" class="slide-pic" alt="learn">
     </div>
     <div class="slide">
-        <img src="images/play.png" class="slide-pic" alt="learn">
+        <img src="images/play.png" class="slide-pic" alt="Play">
         <div class="main-text">Play</div>
         <div class="caption-text">CATmistry's own games</div>
     </div>
     <div class="slide">
-        <img src="images/follow.png" class="slide-pic" alt="learn">
+        <img src="images/follow.png" class="slide-pic" alt="Follow">
         <div class="main-text">Follow</div>
         <div class="caption-text">Your cat on its journey through earth</div>
     </div>
